--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "start": "nodemon --inspect index.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.2",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.16.3",
     "pug": "^3.0.3"
   },
