--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.18.2",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.16.3",
