--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.2",
+    "file-saver": "^2.0.5",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
